@startuml
skinparam classAttributeIconSize 0
left to right direction

/'
class App {
+{static} getInstance() : App
+getCurrentSession() : UserSession
}
'/
/'
class UserSession {
+isLoggedInWithRole() : boolean
}
'/

class Laboratory {
-name : String
-address : String
-phoneNumber : int
-numTIN : int
+Laboratory(name : String, address : String, phoneNumber : int, numTIN : int)
}

class ClinicalAnalysisLaboratory {
-laboratoryID : String
+ClinicalAnalysisLaboratory(laboratoryID : String, name : String, address : String, phoneNumber : int, numTIN : int, selectedTT)
}

class TestType {
- code : String
- description : String
- collectingMethod : String
}

class Company {
-designation : String
+getTestTypeStore()
+createClinicalAnalysisLaboratory(laboratoryID : String, name : String, address : String, phoneNumber : int, numTIN : int, tt)
+saveClinicalAnalysisLaboratory(cal)
-addClinicalAnalysisLaboratory(cal)
+validateClinicalAnalysisLaboratory(cal)
/'+getTestTypes()
+getTestTypesByDesignation(selectedTestTypes)'/
}

class TestTypeStore {
+getTestTypes()
+getTestTypesByCode(testTypesCodes)
}

/'
class LaboratoryStore {
+createClinicalAnalysisLaboratory(laboratoryID : String, name : String, address : String, phoneNumber : int, numTIN : int, tt)
+saveClinicalAnalysisLaboratory(cal)
-addClinicalAnalysisLaboratory(cal)
+validateClinicalAnalysisLaboratory(cal)
}'/

class RegisterNewCalController {
+getTestTypes()
+createClinicalAnalysisLaboratory(laboratoryID : String, name : String, address : String, phoneNumber : int, numTIN : int, testTypesDesignations)
+saveClinicalAnalysisLaboratory()
}

class RegisterNewCalUI {}

class TestTypeMapper {
+List<TestTypeDto> toDTO(List<TestType> testTypes)
+TestTypeDto toDTO(TestType tt)
}


class TestTypeDto {
-code
-description
-collectingMethod
+TestTypeDto(code, description, collectingMethod, selectedCategories)
+getCode()
+getDescription()
+getCollectingMethod()
+getSelectedCategories()
}

class LaboratoryDto {
-name
-address
-phoneNumber
-numTIN
+getName()
+getAddress()
+getPhoneNumber()
+getNumTIN()
}

class ClinicalAnalysisLaboratoryDto {
-laboratoryID
-testTypesCodes
+getLaboratoryID()
+getTestTypesCode()
}

RegisterNewCalUI ..> RegisterNewCalController
RegisterNewCalController ..> Laboratory
RegisterNewCalController ..> TestType
RegisterNewCalController ..> ClinicalAnalysisLaboratory
RegisterNewCalController ..> Company
RegisterNewCalController ..> TestTypeStore
/'RegisterNewCalController ..> App
RegisterNewCalController ..> UserSession'/

RegisterNewCalController ..> TestTypeMapper
TestTypeMapper ..> TestType
TestTypeMapper ..> TestTypeDto
RegisterNewCalController ..> TestTypeDto
RegisterNewCalUI ..> TestTypeDto

RegisterNewCalController ..> LaboratoryDto
ClinicalAnalysisLaboratoryDto --|> LaboratoryDto
RegisterNewCalController .> ClinicalAnalysisLaboratoryDto
RegisterNewCalUI ..> ClinicalAnalysisLaboratoryDto




Company "1" -> "1" TestTypeStore : uses >
TestTypeStore "1" -> "*" TestType : conducts >
/'VERIFICAR MULTIPLICIDADE LINHA ABAIXO'/
/'ClinicalAnalysisLaboratory "1" --> "1" Laboratory : is of >'/
/'Laboratory "1" --> "1" LaboratoryStore : uses >'/
Company "1" --> "3..*" Laboratory : owns >
ClinicalAnalysisLaboratory "1" -> "1..*" TestType : operates >

/'TestTypeStore -[hidden]-> LaboratoryStore'/

TestType -[hidden]down-> ClinicalAnalysisLaboratory


ClinicalAnalysisLaboratory --|> Laboratory

/'ACRESCENTAR TESTTYPE CHARACTERIZED BY CATEGORY!!!!!!'/



@enduml